--- a/scss/components/_galaxy_forum.scss
+++ b/scss/components/_galaxy_forum.scss
@@ -249,7 +249,7 @@ table.mceEditor {
 		padding: 0;
 		height: 26px;
 		border: 0;
-		margin-top: 0px;
+		margin-top: 0;
 		margin-right: 1rem;
 		margin-left: 1rem;
 	  }
