--- a/scss/components/_bcalc.scss
+++ b/scss/components/_bcalc.scss
@@ -70,7 +70,7 @@
 	  font-size: $text-default;
 	  background-color: rgba($color-secondary, .4);
 	  border-radius: 3px;
-	  box-shadow: inset 0px 2px 4px 2px rgba(#000, .4);
+	  box-shadow: inset 0 2px 4px 2px rgba(#000, .4);
 	}
 
 	input[type='checkbox'] {
