--- a/scss/components/_population.scss
+++ b/scss/components/_population.scss
@@ -7,7 +7,7 @@
 	width: 110px;
 	height: 4px;
 	border: 1px solid rgba(#000, .5);
-	box-shadow: -1px 1px 5px 0px #000, 0px 0px 1px 1px $color-primary;
+	box-shadow: -1px 1px 5px 0 #000, 0 0 1px 1px $color-primary;
 	margin: 7px 4px 7px 4px;
 	position: absolute;
 	z-index: 1;
@@ -23,7 +23,7 @@
 	border-bottom: 1px solid rgba(black, .85);
 	border-left: 1px solid rgba(80, 164, 246, 0.21);
 	border-radius: 6px;
-	box-shadow: inset 0px -1px 2px 1px rgba(#000, .5), 0px 0px 3px 2px rgba(#000, .3);
+	box-shadow: inset 0 -1px 2px 1px rgba(#000, .5), 0 0 3px 2px rgba(#000, .3);
 	margin-left: 5px;
 
 	&:active {
