--- a/scss/components/_research_construction_waves.scss
+++ b/scss/components/_research_construction_waves.scss
@@ -4,8 +4,8 @@
 .construction_info .title,
 .scans .title,
 .governments .title {
-  font-size: 1.3rem;
-  text-shadow: 1px 1px 0px #000;
+  font-size: $text-large;
+  text-shadow: 1px 1px 0 #000;
   padding: .25rem .5rem;
   display: block;
   //background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
@@ -354,7 +354,7 @@
   .research_current,
   .research_next {
 	text-align: center;
-	padding: 1rem 2rem;
+	padding: .5rem 2rem;
 	width: 100% !important;
 
 	.time,
@@ -365,7 +365,7 @@
 
   .research_next {
 	font-style: italic;
-	border-top: 1px solid rgba(82, 165, 248, 0.5);
+	border-top: 1px solid rgba(82, 165, 248, 0.25);
 
 	&[id] {
 	  font-style: normal;
@@ -399,7 +399,7 @@
 
 		&:last-of-type {
 		  text-align: center;
-		  padding-bottom: 10px;
+		  padding-bottom: 0;
 		  order: 6;
 		}
 	  }
