--- a/scss/components/_research_construction_waves2.scss
+++ b/scss/components/_research_construction_waves2.scss
@@ -11,6 +11,7 @@
 	  display: flex;
 	  flex-direction: row;
 	  flex-wrap: wrap;
+	  justify-content: flex-start;
 
 	  .title {
 		width: 100%;
@@ -18,10 +19,16 @@
 	  }
 
 	  .progress_wrapper {
+		width: 200px;
+		margin: 12px 0 12px 0;
 		order: 3;
 
 		+ p {
 		  font-size: 13px;
+		  text-align: left;
+		  padding-bottom: 0;
+		  display: flex;
+		  align-items: center;
 		  order: 4;
 		}
 	  }
