--- a/scss/components/_research_construction_waves.scss
+++ b/scss/components/_research_construction_waves.scss
@@ -367,6 +367,10 @@
 	font-style: italic;
 	border-top: 1px solid rgba(82, 165, 248, 0.25);
 
+	> p:first-child {
+	  padding-bottom: 0;
+	}
+
 	&[id] {
 	  font-style: normal;
 	  display: flex;
