--- a/scss/components/_planet_details.scss
+++ b/scss/components/_planet_details.scss
@@ -163,8 +163,19 @@
 	max-width: unset;
 	height: unset;
 	position: absolute;
-	top: -35px;
-	left: -5px;
+	top: -50px;
+	left: -183px;
+
+	&:before {
+	  content: '';
+	  display: block;
+	  background-image: url('/images/template60/planetarion-icon.png');
+	  background-repeat: no-repeat;
+	  background-size: contain;
+	  width: 212px;
+	  height: 43px;
+	  position: relative;
+	}
 
 	span.textlabel {
 	  font-size: $text-huge;
