addition of logo

--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -6,7 +6,7 @@
 }
 
 #menu {
-  padding: 0 0 1rem;
+  padding: 83px 0 1rem;
   list-style: none;
   display: table;
   background: $color-background;
