--- a/scss/components/_mobile.scss
+++ b/scss/components/_mobile.scss
@@ -17,7 +17,7 @@ body.mobile {
 	grid-column-gap: 0;
 
 	#menu {
-	  padding: 0 0 1rem;
+	  padding: 105px 0 1rem;
 	  display: grid;
 	  grid-column: 1/2;
 	  grid-column-end: 3;
