--- a/scss/components/_planet_details.scss
+++ b/scss/components/_planet_details.scss
@@ -169,12 +169,15 @@
 	&:before {
 	  content: '';
 	  display: block;
-	  background-image: url('/images/template60/planetarion-icon.png');
+	  background-image: url('/images/template60/ultimate-planetarion.jpg');
 	  background-repeat: no-repeat;
 	  background-size: contain;
-	  width: 212px;
-	  height: 43px;
-	  position: relative;
+	  background-position: center top;
+	  width: 168px;
+	  height: 127px;
+	  position: absolute;
+	  top: 23px;
+	  left: 0;
 	}
 
 	span.textlabel {
@@ -183,7 +186,7 @@
 	  letter-spacing: 2px;
 	  text-shadow: 1px 1px 3px black;
 	  flex-basis: 100%;
-	  margin-left: 16px;
+	  padding: 19px 0 0 183px;
 
 	  &:after {
 		display: none;
