--- a/scss/components/_global.scss
+++ b/scss/components/_global.scss
@@ -95,7 +95,7 @@ hr {
 /* Page Outline
    -------------------------------------------------------*/
 #page {
-  padding: 3.75rem .5rem 0;
+  padding: 36px .5rem 0;
   display: grid;
   width: 100%;
   max-width: 90rem;
