--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -142,15 +142,16 @@
 
 		&:before {
 		  color: rgba($color-primary, .5);
-		  font-size: $text-large;
-		  white-space: nowrap;
-		  padding: .25rem;
-		  content: 'Ultimate skin v4.07';
-		  border: 1px solid rgba($color-primary, .5);
+		  font-size: .4rem;
+		  line-height: 1.2;
+		  padding: 0.25rem;
+		  content: 'If this skin customisation adds even a tiny bit of enjoyment to your gaming experience it was well worth the countless hours of development. Made with love, for my fellow spreadsheet warriors. UltimateNewbie \2665';
+		  border: 1px solid rgba(82, 165, 248, .5);
 		  position: absolute;
-		  bottom: -3.75rem;
+		  bottom: -5rem;
 		  left: 50%;
 		  transform: translateX(-50%);
+		  width: 106px;
 		}
 	  }
 	}
