--- a/scss/components/_alliance_members.scss
+++ b/scss/components/_alliance_members.scss
@@ -6,7 +6,7 @@
 		font-weight: bold;
 		background: $color-bg-th;
 	  }
-
+	  
 	  &:nth-child(odd) {
 		td {
 		  background-color: $color-secondary-alt;
@@ -24,6 +24,12 @@
 		  &:empty {
 			background: transparent;
 		  }
+		}
+	  }
+
+	  &:hover {
+		td {
+		  background: rgba($color-primary, .2);
 		}
 	  }
 	}
