--- a/scss/components/_universe.scss
+++ b/scss/components/_universe.scss
@@ -159,8 +159,8 @@ div[id^='page_universe_'] {
 		}
 
 		&.gc {
-		  //color: #00e413;
-		  color: #ffffff;
+		  color: #00e413;
+		  //color: #ffffff;
 		  font-weight: bold;
 		}
 	  }
