--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -11,7 +11,7 @@ $color-terran: #a18181;
 $color-cathaar: #4d88bc;
 $color-xandathrii: #2ba87e;
 $color-zikonian: #c93716;
-$color-eitraides: #a76cc3;
+$color-eitraides: #c3af6c;
 $color-kinthia: #7745d2;
 $color-slythonian: #c2146a;
 //
