--- a/scss/components/_universe.scss
+++ b/scss/components/_universe.scss
@@ -295,12 +295,12 @@ div[id^='page_universe_'] {
 
 			&:nth-child(7) {
 			  a {
-				color: $color-slythonian !important;
-				border-color: $color-slythonian !important;
+				color: $color-eitraides !important;
+				border-color: $color-eitraides !important;
 
 				&:hover {
 				  color: $color-background !important;
-				  background-color: $color-slythonian !important;
+				  background-color: $color-eitraides !important;
 				}
 			  }
 			}
